# notecalc

./: Cargo.toml  Dockerfile  README.md  compile_and_run.bat
frontend/: Cargo.toml
frontend/src/: lib.rs  utils.rs
notecalc/: Cargo.toml
notecalc/src/: borrow_checker_fighter.rs  calc.rs  functions.rs  lib.rs  renderer.rs  shunting_yard.rs  token_parser.rs
notecalc/src/editor/: editor.rs  editor_content.rs  test.rs
notecalc/src/units/: constants.rs  mod.rs  units.rs
