[package]
name = "notecalc"
version = "0.1.0"
authors = ["pchchv <ipchchv@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracy = ["tracy-client"]

[dependencies]
const_fn = "^0.4.9"
const_panic = "^0.2.7"
rustc-ap-syntax_pos = "^634.0.0"
bigdecimal = "^0.3.0"
byteorder = "^1.4.3"
strum = "^0.24.1"
strum_macros = "^0.24.1"
bumpalo = "^3.12.0"
rust_decimal = "^1.28.1"
tinyvec = "^1.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracy-client = { version = "^0.15.0", features = ["enable"], optional = true  }

[dev-dependencies]
rand = "^0.8.5"
